--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
-DB_PORT=3003
+DB_PORT=3004
 DB_HOST=localhost
 DB_USER=root
 DB_PASS=
-DB_DATABASES=tickitz
+DB_NAME=dompetmu
+SMTP_EMAIL=tiketinaja.back.end@gmail.com
+SMTP_PASSWORD=welcome#123
+PRIVATE_KEY=RAHASIA
