--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
 PORT=3004
-DB_HOST=sql6.freemysqlhosting.net
-DB_USER=sql6423187
-DB_PASS=ijUsyaTR6S
-DB_NAME=sql6423187
+DB_HOST=mysql-38046-0.cloudclusters.net
+DB_USER=admin
+DB_PASS=HSZS5qN1
+DB_NAME=dompetmu
+DB_PORT=38046
 SMTP_EMAIL=tiketinaja.back.end@gmail.com
 SMTP_PASSWORD=Welcome#1234
 PRIVATE_KEY=RAHASIA
