--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 PORT=3004
-DB_HOST=mysql-38046-0.cloudclusters.net
+DB_HOST=mysql-49047-0.cloudclusters.net
 DB_USER=admin
-DB_PASS=HSZS5qN1
+DB_PASS=BUk3oKJ7
 DB_NAME=dompetmu
-DB_PORT=38046
+DB_PORT=19958
 SMTP_EMAIL=tiketinaja.back.end@gmail.com
 SMTP_PASSWORD=Welcome#1234
 PRIVATE_KEY=RAHASIA
