--- a/.env
+++ b/.env
@@ -1,9 +1,7 @@
-PORT=3004
-DB_HOST=mysql-49047-0.cloudclusters.net
-DB_USER=admin
-DB_PASS=BUk3oKJ7
-DB_NAME=dompetmu
-DB_PORT=19958
-SMTP_EMAIL=tiketinaja.back.end@gmail.com
-SMTP_PASSWORD=Welcome#1234
+PORT=3000
+DB_HOST=localhost
+DB_USER=root
+DB_PASS=
+DB_NAME=rampung_id
+DB_PORT=3306
 PRIVATE_KEY=RAHASIA
