--- a/.env
+++ b/.env
@@ -4,4 +4,7 @@ DB_USER=root
 DB_PASS=
 DB_NAME=rampung_id
 DB_PORT=3306
+SMTP_EMAIL=tiketinaja.back.end@gmail.com
+SMTP_PASSWORD=Welcome#1234
 PRIVATE_KEY=RAHASIA
+FRONTEND_URl=http://localhost:3000
